--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,16 @@
 <div class="borda">
   <p class="login">Login</p>
-<form class="example-form">
-  <mat-form-field class="example-full-width">
-    <mat-label>Usuário</mat-label>
-    <input matInput placeholder="Digite seu Email ou Usuário">
-  </mat-form-field>
+  <form class="example-form">
+    <mat-form-field class="example-full-width">
+      <mat-label>Usuário</mat-label>
+      <input matInput placeholder="Digite seu Email ou Usuário">
+    </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <mat-label>Senha</mat-label>
-    <input matInput placeholder="Digite sua Senha">
-  </mat-form-field>
-
- <button (click)="abrir()" ></button>
-</form>
+    <mat-form-field class="example-full-width">
+      <mat-label>Senha</mat-label>
+      <input matInput placeholder="Digite sua Senha">
+    </mat-form-field>
+    <br>
+    <button class="botao" mat-flat-button color="primary" (click)="abrir()">Entrar</button>
+  </form>
 </div>
