--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,27 @@
+<router-outlet></router-outlet>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand">
-    <img
-      src="../assets/front_End.jpg"
-      class="rounded-circle"
-      width="50px"
-      height="50px"
-    />
+  <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="active">
+    <img src="../assets/front_End.jpg" class="rounded-circle" width="50px" height="50px" (click)="voltarLogin()" />
   </a>
-  <a class="navbar-brand nav" [routerLink]="['/']" routerLinkActive="active"
-    >Curriculum</a
-  >
+
   <div class="collapse navbar-collapse campos" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/cursos']" routerLinkActive="active"
-          >Cursos</a
-        >
+        <a class="nav-link" [routerLink]="['/curriculum']" routerLinkActive="active">Curriculum</a>
       </li>
       <li class="nav-item">
-        <a
-          class="nav-link"
-          [routerLink]="['/bootcamps']"
-          routerLinkActive="active"
-          >Bootcamps</a
-        >
+        <a class="nav-link" [routerLink]="['/cursos']" routerLinkActive="active">Cursos</a>
       </li>
       <li class="nav-item">
-        <a
-          class="nav-link"
-          [routerLink]="['/projetos']"
-          routerLinkActive="active"
-          >Projetos/Repositórios</a
-        >
+        <a class="nav-link" [routerLink]="['/bootcamps']" routerLinkActive="active">Bootcamps</a>
       </li>
       <li class="nav-item">
-        <a
-          class="nav-link"
-          [routerLink]="['/ex-prof']"
-          routerLinkActive="active"
-          >Experiência Profissional</a
-        >
+        <a class="nav-link" [routerLink]="['/projetos']" routerLinkActive="active">Projetos/Repositórios</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/ex-prof']" routerLinkActive="active">Experiência Profissional</a>
       </li>
     </ul>
   </div>
 </nav>
-
 <router-outlet></router-outlet>
